Attempting to make back and forward buttons, gone terribly. Struggling a lot with CSS... Buttons have been added but are way too big/ not styled correctly.

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -91,19 +91,44 @@ button {
     align-self: center;
     margin: 2%;
     display: flex;
+    align-items: row;
+}
+
+.right-arrow, .left-arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    width: 5%;
+    height:fit-content;
+    background: rgba(255, 228, 196, 0.65);
+}
+
+.arrow-img {
+    max-height: len;
+    width: auto;
+    object-fit: contain;
 }
 
 .progress {
     text-align: center;
     margin-top: 1%;
     top:0;
-    left:10%;
     position: relative;
     background: rgba(0,0,0,0.1);
     width: 80%;
     height: 20px;
+    border-radius: 100px;
+    display: flex;
+    align-items: flex-start;
 }
 
 .progressVal {
-    animation: load 5s;
+    text-align: center;
+    margin-top: 0;
+    position: relative;
+    background: blue;
+    width: 78%;
+    height: 18px;
+    border-radius: 100px;
 }
